# ChangeLog for app-arch/lz4
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/lz4/ChangeLog,v 1.22 2014/07/11 22:12:12 tgall Exp $

  11 Jul 2014;  <tgall@gentoo.org> lz4-0_p106-r1.ebuild:
  Keyworded on arm64, bug #499468

  05 Jul 2014; Tobias Klausmann <klausman@gentoo.org> lz4-0_p106-r1.ebuild:
  Keyworded on alpha, bug #499468

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> lz4-0_p106-r1.ebuild:
  Stable for ia64, wrt bug #509954

  28 May 2014; Sergey Popov <pinkbyte@gentoo.org> lz4-0_p106-r1.ebuild,
  lz4-9999.ebuild:
  Add ~s390, copy keywords to unified live ebuild

  28 May 2014; Sergey Popov <pinkbyte@gentoo.org> lz4-0_p106-r1.ebuild:
  Stable on x86, wrt bug #509954

  24 May 2014; Agostino Sarubbo <ago@gentoo.org> lz4-0_p106-r1.ebuild:
  Stable for amd64, wrt bug #509954

  23 May 2014; Jeroen Roovers <jer@gentoo.org> lz4-0_p106-r1.ebuild:
  Stable for HPPA (bug #509954).

  28 Apr 2014; Sergey Popov <pinkbyte@gentoo.org> lz4-0_p106-r1.ebuild:
  Add ~mips keyword, wrt bug #499468

  02 Mar 2014; Michał Górny <mgorny@gentoo.org> lz4-9999.ebuild:
  Update the live ebuild to conform with changes upstream. Fix the src_install()
  lib hack to handle $(get_libdir) == lib safely.

  14 Feb 2014; Markus Meier <maekke@gentoo.org> lz4-0_p106-r1.ebuild:
  add ~arm, bug #499468

  08 Feb 2014; Akinori Hattori <hattya@gentoo.org> lz4-0_p106-r1.ebuild:
  keyword ~ia64 wrt bug #499468

  06 Feb 2014; Jeroen Roovers <jer@gentoo.org> lz4-0_p106-r1.ebuild:
  Marked ~hppa (bug #499468).

  06 Feb 2014; Jeroen Roovers <jer@gentoo.org> lz4-0_p106-r1.ebuild,
  +files/lz4-0_p106-cflags.patch:
  Do not set -Os/-O3/-march=native (bug #499470).

  06 Feb 2014; Sébastien Fabbro <bicatali@gentoo.org> lz4-0_p106-r1.ebuild:
  Keyword x86, amd64-linux and x86-linux

*lz4-0_p106-r1 (13 Oct 2013)

  13 Oct 2013; Richard Yao <ryao@gentoo.org>
  +files/lz4-0_p106-install-to-bindir.patch, +lz4-0_p106-r1.ebuild,