@@ -1,7 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX lz4-0_p106-cflags.patch 630 SHA256 fa5a2e429ff7bfc5ff3fd02e5e8078d44f7c704c402d259546c00ad497d445c4 SHA512 0c7cc51229fe20ee0c5e5cb3d933f924750fe3aaa0e97ac78f1f74e4810bf4d9d431990cf12992f25f29dfaffb9dc66b42f3ab6d49147ff881a5cbe49990a89d WHIRLPOOL 754ab3e1cc255ff5226771edc9e9fd977644cf887c49048f4ac1df4e07a347a9dd707aecf952c6223f9b23944b5051fb0032a0605e00964d3ab6af91cc7d93a9
 AUX lz4-0_p106-install-to-bindir.patch 2141 SHA256 3799ef8a56f5cbeecd5f6ceb8716454990087965136322ccd99c6911e60dc924 SHA512 853be770173b46188c4f293f13c263053fd3837c23e959b2d19e36c5d3c8c04798b619224fe02b20f414494baf4db4235b7c223ce665b9b90f14a655c8303f8c WHIRLPOOL 6aac55ec15e8b82a16b06faa50bcb362ace5100bab3788d81ed3618f6efae787664855db14bd0f5393624647d13df40214f873ee7da24d505f9aa4fb371bcdf5
 DIST lz4-0_p106.tar.xz 129352 SHA256 a9a09c4ebb962995d10e7e4f7d9224aaa93f308899de18a414948a58e87b6f22 SHA512 8b2bafbf78be7c42831e264d7acdca12712c88369cecdb3aa4621c84bb6b450c372f5153f7c3939a5f70d5810c62b98993697397319d286a1bb51b1e4a6ecde6 WHIRLPOOL fc5bb47b73606b125d8e155365d1fe101083e68e684ffd6014440e0f1416f1f6ecc64b797083e6939bd3e8cd42018e46a1864ae4542160c96933a47df9421a42
 EBUILD lz4-0_p106-r1.ebuild 1350 SHA256 669b72b2be83597224e77b2a7c8231c3a2aeff361b029a63e3c778a202e6912e SHA512 e74f361740f4a6837eb112ce51548a7832e030147018a05293cc0320f0601cc23ec90e01bd7fef0169bb574c863702fbc8ab5d14dd549fc72145fd77d3f014a2 WHIRLPOOL 22852761ad17a2d69c05a8a85978ab21e4656d7bcef05fdac6593862e87c5aa090f39cb2fa5d1d5730860a0e40c15a94399337fed85e0d4b4a2fd654e74a4079
-EBUILD lz4-9999.ebuild 1213 SHA256 1137fb31d5dfcf9ad0681aa2292cb0ebfda3a060b72f7f89b4d8bb2e70f3f1b8 SHA512 015b6e5fbd5538fdfd213acef292c55b9aae22412139fab38af126a57e2f224509f1904acdea5d5cd2fbda596db58283482391d81dbc7d40c7cb3a859a9e2642 WHIRLPOOL 88242158add5c7ab9c55ac056849cec0abe08e09e7e507e4adfc9c8cf921e55a4bcfbb9cdeb365bb8e32e381bdc2acbb9e74c6b4004d5c792c2607959ec5faac
-MISC ChangeLog 3319 SHA256 8b908a645c990e00e45b60d6c1ec69d782f39169e5b92264ee4cf6f8c1550044 SHA512 83df7c9af1f64974bf54955724b27923ab9d9ee92fce9fa739a26b3fb4524d181a5ff49c499dea3586a7a1b0ca19bc68d279e1fb9572821d70e617ff2271b259 WHIRLPOOL a55d3bd544e6694e83f44a7885e8c56e1a37c980948a47382a67156518e4728ffaddba849f2069e1402f6c7f9e4fa2c72505db5698e4346d1914a80d4426ad2b
+EBUILD lz4-9999.ebuild 1016 SHA256 1956da0023f5256ed8dcbeced9c49ef7f564c83e3e46acd7ecbb93595b78de0e SHA512 f44a371f72b4293a8c77c9a57779ed4edf5fa72fc328d38f0ce493847815223d5100300951f343fef75e6df1343177daa89ca8f2d092d603b6779876f06d8605 WHIRLPOOL b913f3fd5464740826580145dcfd3ddf49e563dc9af85e32fa4c3523461651ef49bf8c48065a9afab5d7b73d1e087f7538194c4ea22783f92c48dc9c335e2419
+MISC ChangeLog 3525 SHA256 9c2c54d72da67cd55256cedc496841222419a38de236001d428623b161655dda SHA512 6ddf54764f401befda7569916efe1ea2ad0f4cfb9fb9e73a72689a887791c44060b1a1827c3858379636fa2f854b2cff3a0bd6ce7da91a912c55eca3fe627f57 WHIRLPOOL b80e80899ab01ecb752eaa971faeac1cf25ad27bce369262b4c00a4dfb9aa56567a613e763874bc50fa541de09f6244f5014b9e3cec4a94eee258bbfedca87c2
 MISC metadata.xml 228 SHA256 a317cd066ed83c5b5acf9d49869cb2f153499bb90cee389334bee9781534f5e8 SHA512 1638d4580908d32ad6fad71d109a58d699c9111d26c1073ae95b20248fc2a5da91a1f73153f01942df25c64865586e970e6532a312cd374d9866bf21264ddc54 WHIRLPOOL 11e5655c66af420e31f60d3ab19ef3ff55222271dd63bca94b548c7a63bbc73e8edfb4d80648d143c7d8315f8ba66bc4140dcf97ff85ea472e2a7cab1de98264
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQJ8BAEBCABmBQJT0XhsXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOSaQQALwPzbzNjYAGwUjUr+alfntw
+u8XinNr9ZZK31VsK2K76riC180Kwju/Unn8tOudHeuA4r6+9su0BsPrqnzsKmL/K
+uAtn0cpkks55UHiPpuK/piKyt7yuLDpYqgSNJ6eDGJsgG6DYuQUNRFNbij8tan5Q
+jcq6XiQu24emzg6cSliUol7/F//IT00M7s/b3a8YwwZlyJtQzzKUMotofiuqxOYp
++eNm0HPAeITWVqc+1v8qXqvf52moyRdDt2IrPXVTpkiLn47IjyiVpe6fmjZKwnLe
+je1IHPcOZEZC8X3yJlell/6WeUWm/+91uh+smg46XBelTCCZGuYqzRbvigiWKIEm
+IlamhqYm0rjxiOHCD04CZy/2qWZLFRgcBV82GkQc9oBG/XHmvVl9cAb9YOGxSWhU
+uOHHwQmDZ5czi3rKN8dV9M/BRz1BEWvUk+b69yIfdYDXrOV8y0gqTmF2KXNwfXfL
+/1paltuU0ev3Ts/74lIqUzIypdnFiUXAu2PoIhpptB3E8/C1W6IETVu2HEfJMxxT
+U6+8iuIo0j9BHUbp79eNqXhBodTVcWhV3/w/GOkKnXmoS3OowTYYXZsJc0WjJn0M
+yUxnKnmL9LyBxSQ/aCY9irtXvDDnsoUNpdB1wQCibKscfSQXi49BeH1LqaU+ohZQ
+vjjIV88YsY4ibG9EWWHI
+=+Rg8
+-----END PGP SIGNATURE-----
